# mcp-server-study

./: README.md
client/: client.py  pyproject.toml
helloworld/: pyproject.toml  weather.py
mcp-build-chess/: README.md  pyproject.toml
mcp-build-chess/src/chess/: chess_api.py  server.py
mcp-build-client-agent-airbnb-memory/: pyproject.toml
mcp-build-memory-tracker/: pyproject.toml  server.py
mcp-client/: pyproject.toml
mcp-primitives-and-inputs/: prompt.py  pyproject.toml  resources.py
mcp-server-deepdive-functionality/: crypto.py  local.py  log.txt  notes.txt  other_inputs.py  pyproject.toml  screenshot.py
mcp-server-http-streamable-updated/: pyproject.toml  server.py
