[project]
name = "mcp-server-deepdive-functionality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.15.0",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.11.9",
    "pyscreeze>=1.0.1",
    "requests>=2.32.5",
    "typing>=3.10.0.0",
]
